# neveko

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/workflows/: audit.yml  release.yml  rust.yml
docs/: args.rs  canary.txt  curl.md  index.txt  man.md  pgp.txt
neveko-auth/: Cargo.toml
neveko-auth/src/: controller.rs  main.rs
neveko-contact/: Cargo.toml
neveko-contact/src/: controller.rs  main.rs
neveko-core/: .neveko  .rustfmt.toml  Cargo.toml
neveko-core/src/: args.rs  auth.rs  contact.rs  db.rs  dispute.rs  error.rs  gpg.rs  i2p.rs  lib.rs  message.rs  models.rs  monero.rs  neveko25519.rs  order.rs  product.rs  proof.rs  reqres.rs  user.rs  utils.rs
neveko-gui/: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
neveko-gui/crates/eframe/src/: epi.rs
neveko-gui/crates/eframe/src/native/: run.rs
neveko-gui/crates/egui-winit/src/: window_settings.rs
neveko-gui/crates/egui/examples/: README.md
neveko-gui/crates/egui/src/: context.rs  lib.rs
neveko-gui/crates/egui/src/widgets/plot/items/: values.rs
neveko-gui/crates/egui/src/widgets/text_edit/: builder.rs
neveko-gui/crates/egui_extras/src/: image.rs
neveko-gui/crates/egui_glium/: Cargo.toml
neveko-gui/crates/egui_glium/examples/: pure_glium.rs
neveko-gui/crates/egui_web/: README.md
neveko-gui/crates/epaint/src/: texture_atlas.rs
neveko-gui/crates/epaint/src/text/: text_layout.rs
neveko-gui/src/: lib.rs  login.rs  main.rs  wrap_app.rs
neveko-gui/src/apps/: address_book.rs  home.rs  lock_screen.rs  mailbox.rs  market.rs  mod.rs  settings.rs  wallet.rs
neveko-market/: Cargo.toml  LICENSE  README.md  curl.md
neveko-market/src/: controller.rs  dispute.rs  lib.rs  main.rs  order.rs  product.rs
neveko-message/: Cargo.toml
neveko-message/src/: controller.rs  main.rs
nevmes-auth/: .gitignore  Cargo.toml
nevmes-auth/src/: controller.rs  main.rs
nevmes-contact/: .rustfmt.toml  Cargo.toml
nevmes-contact/src/: controller.rs  main.rs
nevmes-core/: .rustfmt.toml  Cargo.toml
nevmes-core/src/: args.rs  auth.rs  contact.rs  db.rs  gpg.rs  i2p.rs  lib.rs  message.rs  models.rs  monero.rs  proof.rs  reqres.rs  user.rs  utils.rs
nevmes-gui/: .gitignore  Cargo.toml  README.md
nevmes-gui/crates/egui/examples/: README.md
nevmes-gui/crates/egui/src/: context.rs  lib.rs
nevmes-gui/crates/egui/src/widgets/plot/items/: values.rs
nevmes-gui/crates/egui/src/widgets/text_edit/: builder.rs
nevmes-gui/crates/egui_extras/: Cargo.toml
nevmes-gui/crates/egui_glium/: Cargo.toml
nevmes-gui/crates/egui_glium/examples/: pure_glium.rs
nevmes-gui/crates/egui_web/: README.md
nevmes-gui/crates/epaint/src/text/: text_layout.rs
nevmes-gui/src/: lib.rs  login.rs  main.rs  wrap_app.rs
nevmes-gui/src/apps/: address_book.rs  home.rs  lock_screen.rs  mailbox.rs  mod.rs  settings.rs  wallet.rs
nevmes-market/: .gitignore  Cargo.toml  LICENSE  README.md
nevmes-market/src/: controller.rs  dispute.rs  lib.rs  main.rs  order.rs  product.rs
nevmes-message/: Cargo.toml
nevmes-message/src/: controller.rs  main.rs
scripts/: build_all_and_run.sh  build_debug_release.sh  build_release.sh  check_all.sh  cleanall.sh  fmtall.sh  pre-commit.sample
src/: controller.rs  main.rs
