[package]
name = "neveko"
version = "0.4.8-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
neveko_auth    =   { path = "./neveko-auth" }
neveko_contact =   { path = "./neveko-contact" }
neveko_core    =   { path = "./neveko-core" }
neveko_gui     =   { path = "./neveko-gui" }
neveko_market  =   { path = "./neveko-market" }
neveko_message =   { path = "./neveko-message" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
