[package]
name = "neveko_contact"
version = "0.2.0-beta-rc.1-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.0"
neveko_core = { path = "../neveko-core" }
log = "0.4"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
