[package]
name = "neveko_core"
version = "0.5.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
diqwest = "1.1.1"
env_logger = "0.10.0"
gpgme = "0.11.0"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
lazy_static = "1.4.0"
lmdb-rs = "0.7.6"
log = "0.4"
rand = "0.8.5"
rand_core = "0.6.4"
reqwest = { version = "0.11.12", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
schedule_recv = "0.1.0"
sha2 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
tokio = "1.25.0"
