[package]
name = "neveko_message"
version = "0.4.4-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
neveko_core = { path = "../neveko-core" }
log = "0.4"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
