[package]
name = "nevmes_auth"
version = "0.4.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
nevmes_core = { path = "../nevmes-core" }
log = "0.4"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
